<!DOCTYPE resources [<!ENTITY username "Username"><!ENTITY password "Password"><!ENTITY re_password "Re-Type Password"><!ENTITY email "Email">]>
<resources>
    <string name="app_name">Municipio Arboletes</string>
    <string name="town_name">Uraba Turistico</string>
    <string name="profile_name">Guillermo Grajales</string>
    <string name="name_label">name:</string>
    <string name="username_label">username:</string>
    <string name="email_label">e-mail:</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Sign Up</string>
    <string name="confirm">Confirm</string>
    <string name="login">Log In</string>
    <string name="myProfile">My profile</string>
    <string name="logout">Log Out</string>
    <string name="retype_password">Re-type password</string>
    <string name="e_mail">E-mail</string>
    <string name="cancel">Cancel</string>
    <string name="empty_username">The field &username; is empty</string>
    <string name="empty_password">The field &password; is empty</string>
    <string name="empty_repassword">The field &re_password; is empty</string>
    <string name="empty_email">The field &email; is empty</string>
    <string name="password_error">Passwords don\'t match</string>
    <string name="user_error">User doesn\'t exist</string>
    <string name="password_incorrect">Password is incorrect</string>
    <string name="registration_ok">Registration successful</string>
    <string name="registration_failed">Registration cancelled</string>
    <string name="home">Home</string>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hotel1">Hotel 1</string>
    <string name="hotel2">Hotel 2</string>
    <string name="hotel3">Hotel 3</string>
    <string name="restaurant1">Restaurant 1</string>
    <string name="restaurant2">Restaurant 2</string>
    <string name="restaurant3">Restaurant 3</string>
    <string name="tour1">Attraction 1</string>
    <string name="tour2">Attraction 2</string>
    <string name="tour3">Attraction 3</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hotel_mirador">BOUTIQUE EL MIRADOR</string>
    <!-- TODO add new strings on english language -->
    <string name="h_mirador_description">
        Located in Arboletes Antioquia, nearby our municipality paradisiac beaches. : Check in 15:00 h, Check out: 13:00 ho, Night reception available, Languages: Spanish / English, Wifi, Wet Area, Conditioning air
    </string>
    <string name="h_mirador_short_info">
        Located in Arboletes Antioquia, nearby our municipality paradisiac beaches...
    </string>
    <string name="h_mirador_short_detail">High quality service</string>

    <string name="hotel_riviera">RIVIERA DEL SOL</string>
    <string name="h_riviera_description">
        Riviera del Sol, Hotel SPA, hotel par excellence of "corazón caribe antioqueño", has the pleassure
        to provide the best accommodation and entertainment services in Caribbean Region of Antioquia province,
        strategically located at municipality entrance in front of sea, offering the best assistance and facilities.
    </string>
    <string name="h_riviera_short_info">
        Riviera del Sol, Hotel SPA, hotel par excellence of "corazón caribe antioqueño"...
    </string>
    <string name="h_riviera_short_detail">Premium service</string>

    <string name="hotel_retiro">RETIRO</string>
    <string name="h_retiro_description">
        Located in front of sea in Arboletes Antioquia municipality, 5 minutes away from downtown
        and 15 minutes away from mud volcano. It counts with green areas ideally for CAMPING, pools, toilets,
        2 kiosks to host events, kitchen, bbq, parking lots, hammocks. The perfect place to get a pleasant rest.
    </string>
    <string name="h_retiro_short_info">
        Located in front of sea in Arboletes Antioquia municipality...
    </string>
    <string name="h_retiro_short_detail">Ideal to rest</string>

    <!-- END TODO ************************************* -->
    <string name="hotel_title">Hotels</string>
    <string name="restaurant_title">Restaurants</string>
    <string name="tour_title">Tourist Attractions</string>
    <string name="restaurant_mirador">RESTAURANT MIRADOR</string>
    <string name="r_mirador_description">
        Enjoy in our restaurant the most delicious sea dishes, typical food from the region and all the country, desserts and more, recommended by our chefs.
        Our bar offers the most exquisite cocktails, drinks and imported and national liquors.
    </string>
    <string name="r_mirador_short_info">
        Enjoy in our restaurant the most delicious sea dishes...
    </string>
    <string name="r_mirador_short_detail">High quality</string>

    <string name="restaurant_punto">RESTAURANT EL PUNTO DEL SABOR</string>
    <string name="r_punto_description">
        Excellent restaurant located in the municipality downtown. We offer a vast variety of fast food at great prices.
    </string>
    <string name="r_punto_short_info">
        We offer a vast variety of fast food at great prices...
    </string>
    <string name="r_punto_short_detail">Fast food</string>

    <string name="restaurant_nautilus">RESTAURANT NAUTILUS</string>
    <string name="r_nautilus_description">
        Restaurant with affordable prices, located near the beach. In Nautilus you will find typical dishes of the caribbean region
        and executives dishes.
    </string>
    <string name="r_nautilus_short_info">
        Restaurant with affordable prices, located near the beach...
    </string>
    <string name="r_nautilus_short_detail">Cheap</string>

    <string name="attraction_volcano">MUD VOLCANO</string>
    <string name="a_volcano_description">
        El Volcán de Lodo de Arboletes ubicado en la cabecera municipal es el más grande de su especie en Latinoamérica.
        Con propiedades medicinales el volcán de lodo es uno de los mayores atractivos turísticos no solo de Arboletes
        sino de la región. Maravillosa expresión de la naturaleza.
    </string>
    <string name="a_volcano_short_info">
        Biggest mud volcano in Latin America...
    </string>
    <string name="a_volcano_short_detail">Nature</string>

    <string name="attraction_church">CHURCH INMACULADA CONCEPCIÓN</string>
    <string name="a_church_description">
        Encontramos una gruta que es un adorno de piedra utilizado en la antigua Jerusalén para colocar imágenes religiosas,
        igualmente encontramos una pila bautismal también conocida como bautisterio, con una obra de arte realizada en conchas
        de mar que representa el bautismo de Jesucristo en el rio Jordán realizada por el fallecido señor Héctor propietario del
        hotel el Faro por orden del entonces párroco Gilberto León Franco; es una fuente compuesta por un circuito cerrado.
    </string>
    <string name="a_church_short_info">
        Encontramos una gruta que es un adorno de piedra utilizado en...
    </string>
    <string name="a_church_short_detail">Cultural</string>

    <string name="attraction_beach">BEACHES</string>
    <string name="a_beach_description">
        Las Playas de Arboletes son el mayor atractivo turístico para los visitantes, son playas limpias y seguras, iluminadas
        toda la noche. Dotadas de dos garitas para salvavidas. Es una maravillosa experiencia disfrutar de estas playas en
        compañía de la Familia, Amigos o la Pareja.
    </string>
    <string name="a_beach_short_info">
        Las Playas de Arboletes son el mayor atractivo turístico para los visitantes...
    </string>
    <string name="a_beach_short_detail">Naturaleza</string>

    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="sites">Sites</string>
    <string name="places">Places of Interest</string>
    <string name="arboletes_info">
        Arboletes is a town and municipality in the subregion of Urabá in Antioquia Department, Colombia.

        The municipality is bounded by the Caribbean Sea to the north, the department of Córdoba to the north and east,
        the municipality of San Pedro de Urabá to the south and west, and the municipalities of Turbo and Necoclí.
    </string>
    <string name="profile">Profile</string>

    <string-array name="hotels_description">
        <item>@string/h_mirador_description</item>
        <item>@string/h_riviera_description</item>
        <item>@string/h_retiro_description</item>
    </string-array>

    <string-array name="restaurants_description">
        <item>@string/r_mirador_description</item>
        <item>@string/r_nautilus_description</item>
        <item>@string/r_punto_description</item>
    </string-array>

    <string-array name="attractions_description">
        <item>@string/a_volcano_description</item>
        <item>@string/a_church_description</item>
        <item>@string/a_beach_description</item>
    </string-array>
</resources>
