<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_menu"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/myProfile" />
    </group>

    <item android:title="@string/places">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/hotels_menu"
                    android:icon="@drawable/ic_local_hotel_black_24dp"
                    android:title="@string/hotel_title" />
                <item
                    android:id="@+id/restaurants_menu"
                    android:icon="@drawable/ic_restaurant_black_24dp"
                    android:title="@string/restaurant_title" />
                <item
                    android:id="@+id/tourist_menu"
                    android:icon="@drawable/ic_local_play_black_24dp"
                    android:title="@string/tour_title" />
            </group>
        </menu>

    </item>


    <group android:id="@+id/bottom">
        <item
            android:id="@+id/logout_menu"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout" />
    </group>










</menu>
